# paint-by-numbers

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: preview.yaml  production.yaml
pbn/: Cargo.toml
pbn/src/: canvas.rs  imgutil.rs  kmeans.rs  lib.rs  main.rs  svg.rs
pbn/test/: .gitignore
src/: app.html  type.d.ts
src/components/: Button.svelte  Card.svelte  CloseIcon.svelte  HamburgerIcon.svelte  ImageUpload.svelte  Loading.svelte  TextField.svelte
src/routes/: +page.svelte
src/routes/paint/: +page.svelte
