[package]
name = "pbn"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
image = "0.25.5"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9.0"
wasm-bindgen = "0.2"
js-sys = "0.3.77"

[lib]
name = "pbn"
path = "src/lib.rs"
crate-type = ["cdylib"]
